nav bar menu items padding, underline removed. still not responsive correctly

--- a/main_app/static/css/style.css
+++ b/main_app/static/css/style.css
@@ -9,3 +9,10 @@ form {
     text-align: left;
 }
 
+nav li {
+    padding-right: 15px;
+}
+
+nav li a {
+    text-decoration: none;
+}
